@@ -1563,3 +1563,5 @@ order wrong (apparently).
 
 Added -V option to rtcontrib to report actual contributions, rather than
 just ray coefficients.
+
+Fixed bug in ranimate that caused it to fail in continuation of renderings.
